--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .spinner {
-  position: fixed;
+  position: relative;
   border: 5px solid #f3f3f3;
   -webkit-animation: spin 1s linear infinite;
   animation: spin 1s linear infinite;
@@ -28,8 +28,7 @@ body {
 
 .snipper__wrapper {
   width: 100vw;
-  height: 100vh;
-  position: fixed;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
