--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
-  text-align: center;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.card {
+  padding: 10px;
+  transition: 0.2s all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.card:hover {
+  box-shadow:0 6px 10px 0 rgba(0,0,0,.14),0 1px 18px 0 rgba(0,0,0,.12),0 3px 5px -1px rgba(0,0,0,.2);
 }
